java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494g-hints.pass
Cast ...o to Float
Create method doStuff(java.lang.Object) in org.netbeans.test.java.hints.pkg.CastOrMethodInvocation58494gUsee
